# SkipperCCDTools

./: .gitignore  CMakeLists.txt  ComputeMeans.cpp  CoreImageOps.cpp  CoreImageOps.hpp  README.md  SKChargeAndNoise.cpp
LoadSaveFITS/: FITSFileOperations.cpp
